--- a/WebContent/vista/portal/noticiasMain.zul
+++ b/WebContent/vista/portal/noticiasMain.zul
@@ -86,7 +86,8 @@
 		</n:h5>
 	</div>
 	
-	<div sclass="row">
+	<div sclass="row" apply="org.zkoss.bind.BindComposer"
+		viewModel="@id('vm') @init('com.smile.portal.viewmodels.VM_Navbar')">
 	<div sclass="col s10">
 		<n:div id="owlDemo" sclass="owl-carousel owl-theme">
 
@@ -126,7 +127,7 @@
 		</n:div>
 		</div>
 		<div class="col s2 text-center ">
-					<button class="waves-effect waves-light btn" style="background-color: #8ac7de; margin-top: 25%;" href="/vista/portal/noticias.zul">
+					<button class="waves-effect waves-light btn" style="background-color: #8ac7de; margin-top: 25%;" href="" onClick="@command('noticias')">
 						ver mas
 					</button>
 				</div>	
