--- a/WebContent/resources/css/portal/main.css
+++ b/WebContent/resources/css/portal/main.css
@@ -68,3 +68,169 @@ h4 {
 	padding: 10px 30px; /* Hacemos mas grande el espacio cuando el
 		usuario pase el mouse */
 }
+
+/* estilos para seccion noticias */
+
+#noticias #owlDemo .item{
+  display: block;
+  padding: 30px 10px;
+  margin: 5px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  text-align: justify;
+}
+#noticias .owl-theme .owl-controls .owl-buttons div {
+  padding: 5px 40px;
+}
+ 
+#noticias .owl-theme .owl-buttons span{
+  margin-top: 2px;
+}
+ 
+//To move navigation buttons outside use these settings:
+ 
+#noticias .owl-theme .owl-controls .owl-buttons div {
+  position: absolute;
+}
+ 
+#noticias .owl-theme .owl-controls .owl-buttons .owl-prev{
+  left: -50px;
+  top: 50px; 
+      position: absolute;
+}
+ 
+#noticias .owl-theme .owl-controls .owl-buttons .owl-next{
+  right: -118px;
+  top: 45px;
+      position: absolute;
+}
+
+#noticias .owl-carousel {
+    display: none;
+    position: relative;
+    width: 95%;
+    -ms-touch-action: pan-y;
+    margin-left: 1%;
+}
+/* estilos para seccion noticias */
+
+/* estilos para seccion galeria */
+#galeria .galeria .row {
+	margin-bottom: 0;	
+}
+
+#galeria .galeria h4 {
+	background: #87796f;
+	color: #ffffff;
+	margin: 0;
+	padding: 15px 0;
+}
+#galeria .galeria .seccion {
+	background: url("../../../imagenes/portal/fondo-body2.png") no-repeat;
+	height: 450px;
+	padding: 30px;
+}
+
+#galeria .seccion .fotos {
+	text-align: center;
+	width: 80%;
+}
+
+#galeria .galeria .seccion img {
+	margin-top: 30px;
+	height: 120px;
+	width: 300px;
+	border: 4px solid #87796f
+}
+/* estilos para seccion galeria */
+
+
+/* estilos para seccion eventos */
+#eventos .eventos h4 {
+	background-color: #d9eb52;
+	color: #a0958e;
+	margin: 0;
+	padding: 15px 0;
+}
+
+#eventos .eventos .seccion {
+	padding-top: 20px;
+}
+
+#eventos .subtitulo {
+	font-size: 1.3em;
+	font-weight: bold;
+	color: #8ac7de;
+	text-transform: uppercase;
+}
+
+#eventos .info {
+    padding: 0 15px;
+    height: 130px;
+}
+
+#eventos .info b {
+	color: #f26b7a;
+	font-weight: bold;
+}
+/* estilos para seccion eventos */
+
+
+/* estilos para seccion participa */
+.participa h4 {
+	background-color: #f26b7a;
+	color: #ffffff;
+	margin: 0;
+	padding: 15px 0;
+}
+
+.participa .seccion {
+	padding-top: 20px;
+}
+/* estilos para seccion participa */
+
+/* estilos para seccion comunidad */
+#comunidad .comunidad .row { margin-bottom: 0; }
+
+#comunidad .comunidad h4 { background: #87796f; color: #ffffff; margin: 0;
+padding: 15px 0; }
+
+#comunidad .comunidad .seccion { background:
+url("../../../imagenes/portal/fondo-body2.png") no-repeat;
+height:auto; padding: 30px; }
+
+#comunidad .seccion .fotos { text-align: center; width: 80%; }
+
+#comunidad .comunidad .seccion img { height: auto; width: auto; border:
+none }
+/* estilos para seccion comunidad */
+
+
+/* estilos para seccion twitter */
+#twitter #owlTwitter .item{ display: block; padding: 16px 1px; margin: 5px;
+-webkit-border-radius: 3px; -moz-border-radius: 3px;
+border-radius: 3px; text-align: justify; } .owl-theme
+#twitter .owl-controls .owl-buttons div { padding: 5px 40px; }
+
+#twitter .owl-theme .owl-buttons span{ margin-top: 2px; }
+
+//To move navigation buttons outside use these settings:
+
+#twitter .owl-theme .owl-controls .owl-buttons div { position: absolute;
+}
+
+#twitter .owl-theme .owl-controls .owl-buttons .owl-prev{ left: -50px;
+top: 50px; position: absolute; }
+
+#twitter .owl-theme .owl-controls .owl-buttons .owl-next{ right: -118px;
+top: 45px; position: absolute; }
+
+#twitter .owl-carousel { display: none; position: relative; width: 95%;
+-ms-touch-action: pan-y; margin-left: 1%; }
+
+#twitter .item-twitter span{
+
+font-size: 16px; color: white; }
+
+/* estilos para seccion twitter */
