--- a/WebContent/vista/portal/noticias.zul
+++ b/WebContent/vista/portal/noticias.zul
@@ -1,25 +1,6 @@
-<?page title="Noticias" contentType="text/html;charset=UTF-8"?>
-<?meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"?>
-<?link href="/resources/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css"?>
-<?link href="/resources/materialize_v0.97.5/css/materialize.min.css" rel="stylesheet" type="text/css"?>
-<?link href="/resources/font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css"?>
-<?link href="/resources/css/theme.css" rel="stylesheet" type="text/css"?>
-<?link href="/resources/css/karen.css" rel="stylesheet" type="text/css"?>
-<?link href="/resources/css/loading.css" rel="stylesheet" type="text/css"?>
-<?link href="/resources/css/animate.css" rel="stylesheet" type="text/css"?>
-<?link href="/assets/seguridad/css/ultimasSesionesActivas.zul.css" rel="stylesheet" type="text/css"?>
-
-<?link href="/resources/css/portal/navbar.css" rel="stylesheet" type="text/css"?>
-<?link href="/resources/css/portal/noticias.css" rel="stylesheet" type="text/css"?>
-<?link href="/resources/css/portal/footer.css" rel="stylesheet" type="text/css"?>
-
-<?script src="/resources/bootstrap/js/bootstrap.js"?>
-<?script src="/resources/materialize_v0.97.5/js/materialize.min.js"?>
-<?script src="/resources/js/shorcut.js"?>
-<?script src="/resources/js/fullScreenApi.js"?>
-<?script src="/resources/js/index.js"?>
-<zk>
-<div style="background-color: #c2d62d; height: 10px;"></div>
+<zk xmlns:n="native" xmlns:w="client">
+<n:link href="resources/css/portal/noticias.css" rel="stylesheet" type="text/css"></n:link>
+<div style="background-color:	 #c2d62d; height: 10px;"></div>
 	<div sclass="container">	
 	<div sclass="row">
 	<div sclass="col s12 text-center" style="padding-top: 35px;">
@@ -27,7 +8,7 @@
    	</div>
 		<div sclass="col s3 offset-s1 marcoNoticia text-center" style="padding-top: 12px;">
 			<label value="Título de la Noticia" sclass="tituloNoticia"></label>
-			<image src="../../imagenes/foto-ejemplo.png" sclass="imgNoticia"></image>
+			<image src="/imagenes/foto-ejemplo.png" sclass="imgNoticia"></image>
 			<div style="padding-top: 7px;">
 			<label sclass="fechaNoticia" value="Fecha: 03/07/2016"></label>
 			</div>
@@ -44,7 +25,7 @@
 		
 	<div sclass="col s3 offset-s1 marcoNoticia text-center" style="padding-top: 12px;">
 			<label value="Título de la Noticia" sclass="tituloNoticia"></label>
-			<image src="../../imagenes/foto-ejemplo.png" sclass="imgNoticia"></image>
+			<image src="/imagenes/foto-ejemplo.png" sclass="imgNoticia"></image>
 			<div style="padding-top: 7px;">
 			<label sclass="fechaNoticia" value="Fecha: 03/07/2016"></label>
 			</div>
@@ -61,7 +42,7 @@
 		
 		<div sclass="col s3 offset-s1 marcoNoticia text-center" style="padding-top: 12px;">
 			<label value="Título de la Noticia" sclass="tituloNoticia"></label>
-			<image src="../../imagenes/foto-ejemplo.png" sclass="imgNoticia"></image>
+			<image src="/imagenes/foto-ejemplo.png" sclass="imgNoticia"></image>
 			<div style="padding-top: 7px;">
 			<label sclass="fechaNoticia" value="Fecha: 03/07/2016"></label>
 			</div>
@@ -78,7 +59,7 @@
 		
 		<div sclass="col s3 offset-s1 marcoNoticia text-center" style="padding-top: 12px;">
 			<label value="Título de la Noticia" sclass="tituloNoticia"></label>
-			<image src="../../imagenes/foto-ejemplo.png" sclass="imgNoticia"></image>
+			<image src="/imagenes/foto-ejemplo.png" sclass="imgNoticia"></image>
 			<div style="padding-top: 7px;">
 			<label sclass="fechaNoticia" value="Fecha: 03/07/2016"></label>
 			</div>
@@ -95,7 +76,7 @@
 		
 		<div sclass="col s3 offset-s1 marcoNoticia text-center" style="padding-top: 12px;">
 			<label value="Título de la Noticia" sclass="tituloNoticia"></label>
-			<image src="../../imagenes/img-por-defecto.png" sclass="imgNoticia"></image>
+			<image src="/imagenes/img-por-defecto.png" sclass="imgNoticia"></image>
 			<div style="padding-top: 7px;">
 			<label sclass="fechaNoticia" value="Fecha: 03/07/2016"></label>
 			</div>
@@ -112,7 +93,7 @@
 		
 		<div sclass="col s3 offset-s1 marcoNoticia text-center" style="padding-top: 12px;">
 			<label value="Título de la Noticia" sclass="tituloNoticia"></label>
-			<image src="../../imagenes/foto-ejemplo.png" sclass="imgNoticia"></image>
+			<image src="/imagenes/foto-ejemplo.png" sclass="imgNoticia"></image>
 			<div style="padding-top: 7px;">
 			<label sclass="fechaNoticia" value="Fecha: 03/07/2016"></label>
 			</div>
