--- a/WebContent/vista/portal/eventos.zul
+++ b/WebContent/vista/portal/eventos.zul
@@ -1,31 +1,8 @@
-<?page title="FANCA - Eventos" contentType="text/html;charset=UTF-8"?>
-<?meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"?>
-<?link href="/resources/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css"?>
-<?link href="/resources/materialize_v0.97.5/css/materialize.min.css" rel="stylesheet" type="text/css"?>
-<?link href="/resources/font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css"?>
-<?link href="/resources/css/theme.css" rel="stylesheet" type="text/css"?>
-<?link href="/resources/css/karen.css" rel="stylesheet" type="text/css"?>
-<?link href="/resources/css/loading.css" rel="stylesheet" type="text/css"?>
-<?link href="/resources/css/animate.css" rel="stylesheet" type="text/css"?>
-<?link href="/assets/seguridad/css/ultimasSesionesActivas.zul.css" rel="stylesheet" type="text/css"?>
-<?link href="/resources/css/portal/navbar.css" rel="stylesheet" type="text/css"?>
-<?link href="/resources/css/portal/contactanos.css" rel="stylesheet" type="text/css"?>
-<?link href="/resources/css/portal/eventos.css" rel="stylesheet" type="text/css"?>
-<?link href="/resources/css/portal/footer.css" rel="stylesheet" type="text/css"?>
-<?script src="/resources/bootstrap/js/bootstrap.js"?>
-<?script src="/resources/materialize_v0.97.5/js/materialize.min.js"?>
-
-<?link href="/resources/fullcalendar/fullcalendar.css" rel="stylesheet" type="text/css"?>
-
-<?script src="/resources/fullcalendar/fullcalendar.min.js"?>
-
-
-<?script src="/resources/js/shorcut.js"?>
-<?script src="/resources/js/fullScreenApi.js"?>
-<?script src="/resources/js/index.js"?>
 <zk xmlns:n="native" xmlns:w="client">
+<n:link href="resources/css/portal/eventos.css" rel="stylesheet" type="text/css"></n:link>
+<n:link href="resources/fullcalendar/fullcalendar.css" rel="stylesheet" type="text/css"></n:link>
 
-
+<n:script src="resources/fullcalendar/fullcalendar.min.js"></n:script>
 
 	<div sclass="container-fluid">
 		<div class="cinta"></div>
