--- a/WebContent/views/web/calendario.zul
+++ b/WebContent/views/web/calendario.zul
@@ -17,7 +17,7 @@
 	</div>
 	<div class="container-fluid" style="Background-color: #F0F2DC;" 
 		apply="org.zkoss.bind.BindComposer"
-		viewModel="@id('vm') @init('ve.smile.web.viewmodels.VM_Main')">
+		viewModel="@id('vm') @init('ve.smile.web.viewmodels.calendario.VM_Calendario')">
 		<div class="row" style="margin-bottom: 0;">
 			<div sclass="col s12">
 				<div class="col-md-1"></div>
@@ -41,7 +41,8 @@
 				<div class="col-md-1"></div>
 				<div class="col-md-6"
 					style="padding: 8px; background-color: #3B85A1 !important; padding-top: 0px;">
-					<n:div id='calendar'></n:div>
+					 <include src="/views/web/zk_calendar.zul" />
+<!-- 					<n:div id='calendar'></n:div> -->
 				</div>	
 				
 				
@@ -52,17 +53,19 @@
 							
 							<div class="col-md-4"
 								style="background: white;border: 8px solid #3B85A1;padding: 0px !important; margin-left: 15px !important;">
-								<div apply="org.zkoss.bind.BindComposer"
-									viewModel="@id('vm') @init('ve.smile.web.viewmodels.evento.VM_Evento')">
+								<div class="detalle-album" visible="@load(vm.eventoPlan eq null?'true':'false')">
+									<n:h3 class="text-center">Seleccione un Evento en el Calendario
+										para ver Detalle</n:h3>
+								</div>
+								<div class="detalle-album" visible="@load(vm.eventoPlan eq null?'false':'true')">
 									<div align="center"
 										style="width: 100%; background-color: #d9eb52; margin-top: 0px !important; padding: 4px 0px !important">
-										<n:h6
-											style="color:#87796f; font-family: Roboto,sans-serif !important; font-weight: bold;">
-											<label
-												value="@load(vm.evento.fkEvento.nombre)">
+										<n:h6>
+											<label style="font-size: 1rem; color:#87796f; font-family: Roboto,sans-serif !important; font-weight: bold;"
+												value="@load(vm.eventoPlan.fkEvento.nombre)">
 											</label>
 										</n:h6>
-									</div>
+									</div>			
 									<div sclass="row">
 										<div sclass="col s12">
 											<div sclass="col s6">
@@ -75,14 +78,14 @@
 													<n:br></n:br>
 													<n:b>Lugar:</n:b>
 													<label
-														value="@load(vm.evento.fkDirectorio.nombre)">
+														value="@load(vm.eventoPlan.fkDirectorio.nombre)">
 													</label>
 													<n:br></n:br>
 													<n:b>
 														Dirección:
 													</n:b>
 													<label
-														value="@load(vm.evento.fkDirectorio.direccion)">
+														value="@load(vm.eventoPlan.fkDirectorio.direccion)">
 													</label>
 													<n:br></n:br>
 												</div>
@@ -103,7 +106,7 @@
 												<n:br></n:br>
 												<image
 													class="img-responsive center-block" width="128px"
-													height="128px" src="@load(vm.evento.fkMultimedia.url)">
+													height="128px" src="@load(vm.eventoPlan.fkMultimedia.url)">
 												</image>
 												<n:br></n:br>
 											</div>
@@ -112,21 +115,18 @@
 											align="justify">
 											<div sclass="row">
 												<label
-													value="@load(vm.evento.fkEvento.descripcion)">
+													value="@load(vm.eventoPlan.fkEvento.descripcion)">
 												</label>
 											</div>
-											<div visible="@load(vm.evento.botonAlbum eq true)">
-											<div
-												sclass="row center-align" 	apply="org.zkoss.bind.BindComposer"
-												viewModel="@id('vm') @init('ve.smile.web.viewmodels.albumes.VM_Album')"											
-												style="margin-bottom:0pc">
-												<button type="button" 
-													id="nEMQo3" onClick="@command('album' ,album=each)"
-													iconSclass="" class="indigo waves-effect waves-light btn"
-													style="background-color: #3B85A1 !important; ">
-													VER ÁLBUM
-												</button>
-											</div>
+											<div visible="@load(vm.eventoPlan.fkAlbum eq null?'false':'true')">
+												<div sclass="row center-align" style="margin-bottom:0pc">
+													<button type="button" 
+														id="nEMQo3" onClick="@command('album' ,album=vm.eventoPlan.fkAlbum )"
+														iconSclass="" class="indigo waves-effect waves-light btn"
+														style="background-color: #3B85A1 !important; ">
+														VER ÁLBUM
+													</button>
+												</div>
 											</div>
 
 										</div>
